Fix select text not showing

--- a/css/table-style.css
+++ b/css/table-style.css
@@ -62,11 +62,9 @@ td{
 }
 
 #lesson-filter select{
-    margin-top: 10px;
     width: 300px;
-    height: 20px;
+    height: 30px;
     border: var(--alternative-color) solid 1px;
     border-radius: 5px;
-    padding: 10px;
     font-size: var(--subtitle-font-size);
 }
